# RecordOdroid

./: run.sh
IMUrecorder/: CMakeLists.txt  readIMU.cpp
OutputFiles/2017-11-22:01:09:25/: video_timstamp.txt
OutputFiles/2017-11-22:01:11:10/: IMU.txt  video_timstamp.txt
OutputFiles/2017-11-22:01:11:32/: IMU.txt
OutputFiles/2017-11-22:01:12:23/: IMU.txt  vid1.avi  vid2.avi  video_timstamp.txt
OutputFiles/2017-11-22:01:12:53/: IMU.txt  vid1.avi  vid2.avi  video_timstamp.txt
VideoRecorder/: CMakeLists.txt  main.cpp  run.sh
VideoRecorder/Output_files/2017-Nov-21 23:57:53/: video_timstamp.txt
VideoRecorder/Output_files/2017-Nov-21 23:58:20/: vid1.avi  vid2.avi  video_timstamp.txt
VideoRecorder/Output_files/2017-Nov-22 00:31:07/: vid1.avi  vid2.avi  video_timstamp.txt
VideoRecorder/include/: IMUrecorder.h  VideoRecorder.h  autopilot_interface.h  mavlink_control.h
VideoRecorder/src/: IMUrecorder.cpp  VideoRecorder.cpp  autopilot_interface.cpp  mavlink_control.cpp  serial_port.cpp
